<resources>
    <string name="app_name">Radiogram</string>

    <!-- Strings related to login -->
    <string name="title_activity_reg">RegActivity</string>
    <string name="email">Адрес электронной почты</string>
    <string name="password">Пароль</string>
    <string name="password_2">Потвердите пароль</string>
    <string name="name">Имя</string>
    <string name="sign_in">ВОЙТИ</string>
    <string name="sign_out">Выйти</string>
    <string name="register">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="photo">ФОТО</string>
    <string name="gallery">ГАЛЕРЕЯ</string>
    <string name="add_photo">ДОБАВИТЬ ФОТО</string>
    <string name="start_activity_text">На сервере ведутся технические работы.</string>
    <string name="start_activity_download_text">Необходимо скачать актуальную версию приложения.</string>
    <string name="default_name">ВАСЯ ПУПКИН</string>
    <string name="default_date">01.21.2021 (43.32.34)</string>
    <string name="default_message">Стандартное сообщение. Тут может быть Ваша реклама.</string>
    <string name="losses_no">Список объявлений пуст.\nДобавьте новое!</string>
    <string name="items_no">Данный список пуст.\n</string>
    <string name="image_text_1">Какой способ Вам по душе?</string>
    <string name="add_profile">Создание профиля</string>
    <string name="step_1">Шаг 1</string>
    <string name="step_2">Шаг 2</string>
    <string name="sur_name">Фамилия</string>
    <string name="reg_password_settings_1">Безопасность аккаунта</string>
    <string name="reg_password_settings_2">Чтобы защитить аккаунт от злоумышленников, Вам необходимо указать адрес электронной почты и завести пароль</string>
    <string name="reg_password_settings_3">Пароль должен состоять из шести или более символов</string>
    <string name="add_name_settings_3">Наименование должно состоять из двух или более символов</string>
    <string name="reg_password_settings_4">Поля для ввода должны быть заполнены</string>
    <string name="reg_password_settings_5">Введите верный пороль</string>
    <string name="input">Сообщение</string>
    <string name="next">ДАЛЕЕ</string>
    <string name="chat">Диалоги</string>
    <string name="complete">ГОТОВО!</string>
    <string name="complete_2">ГОТОВО</string>
    <string name="userName">Сигизмунд Ольгердович</string>
    <string name="EditProfile">РЕДАКТОР ПРОФИЛЯ</string>
    <string name="edit_background">ИЗМЕНИТЬ ФОН</string>
    <string name="edit_photo">Изменить изображение</string>
    <string name="edit_photo_2">Изменить фото</string>
    <string name="edit">РЕДАКТИРОВАТЬ</string>
    <string name="google_play">Google Play</string>
    <string name="title_activity_content_profile">Content_profile</string>
    <string name="group">Группа</string>
    <string name="kurs">Курс</string>
    <string name="mrk_main">Главная</string>
    <string name="main_profile">Мой профиль</string>
    <string name="main_table">Расписание</string>
    <string name="main_vk">Группа вк</string>
    <string name="main_site">Сайт колледжа</string>
    <string name="main_library">Библиотека</string>
    <string name="title_activity_lost">LostActivity</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="menu_home">Новости</string>
    <string name="flesh">Флешка</string>
    <string name="message">сообщение</string>
    <string name="menu_lost">Объявления</string>
    <string name="my">Мои</string>
    <string name="all">Все</string>
    <string name="place">Место</string>
    <string name="time">Время</string>
    <string name="description">Описание</string>
    <string name="no_description">Описание отсутствует</string>
    <string name="name_of_thing">Наименование предмета:</string>
    <string name="name_of_thing2">Наименование предмета</string>
    <string name="add_loss">Добавить вещь</string>
    <string name="finds">Находки</string>
    <string name="losses">Потери</string>
    <string name="date_of_loss">Дата потери:</string>
    <string name="edit_color">Изменить цвет обводки</string>
    <string name="title_activity_main_window">MainWindow</string>
    <string name="banner_ad_unit_id">ca-app-pub-2972366758632504~4441622403</string>
    <string name="edit_color_text">Чтобы изменить цвет обводки, необходимо просмотреть увлекательный видеоролик от нашего спонсора. Желаете продолжить?</string>
    <string name="title_activity_admob">AdmobActivity</string>
    <string name="change">Изменить</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="dialog_delete_loss">Вы действительно желаете удалить объявление?</string>

    <string name="news">Новости</string>
    <!-- -
        Необходимо с теста перейти на мой AdMob
        myID: ca-app-pub-2972366758632504~4441622403
        testID: 3940256099942544~3347511713

        my: ca-app-pub-2972366758632504/5676605030 без видео
        my: ca-app-pub-2972366758632504/7893798165 видео
        my: ca-app-pub-2972366758632504/2220324109 видео
        test: ca-app-pub-3940256099942544/1033173712
    <!- -->
    <string name="interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_unit_id">ca-app-pub-2972366758632504~4441622403</string>

    <string name="app_id">86441674484</string>
    <string name="achievement_alpha_id">CgkI9I3NgsICEAIQAQ</string>
    <string name="achievement_beta_id">CgkI9I3NgsICEAIQAg</string>
    <string name="achievement_five_messages_id">CgkI9I3NgsICEAIQAw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="app_info">О приложении</string>
    <string name="app_info_text">Данное приложение разработано для общения пользователей в чате,
        также имеется возможность просматривать новости минского радиотехнического колледжа
    и оставлять сообщения о потерянных и найденных вещах. Radiogram создан не в коммерческих целях,
    а для закрепления знаний в области программирования. Участники команды Radiogram не являются
    профессионалами, поэтому и уровень приложения соответственный. О сбоях приложения
    просим сообщать на электронную почту или на Google Play.</string>
    <string name="privacy_policy">политика конфиденциальности</string>
    <string name="tell_about_bag">сообщить о баге</string>
    <string name="alphabet">абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯabcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@.</string>
    <string name="alphabet_with_space">абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@.</string>
    <string name="numbers">1234567890</string>
    <string name="title_activity_photo_cutter">PhotoCutterActivity</string>
    <string name="my_friends">Мои друзья</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="empty">Тут ничего нет</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
