<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/my_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/main_profile" />
    <item
        android:id="@+id/my_friends"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/my_friends" />
    <item
        android:title="Навигация">
        <menu>
            <group >
                <item
                    android:id="@+id/news"
                    android:icon="@drawable/ic_main"
                    android:title="@string/news" />
                <item
                    android:id="@+id/chat"
                    android:icon="@drawable/ic_chat"
                    android:title="@string/chat" />
                <item
                    android:icon="@drawable/ic_losses"
                    android:id="@+id/losses"
                    android:title="@string/menu_lost" />
        </group>
    </menu>
    </item>
    <item android:title="Ресурсы">
        <menu>
            <group>
            <item
                android:id="@+id/go_vk"
                android:icon="@drawable/ic_profile"
                android:title="@string/main_vk" />
            <item
                android:id="@+id/go_site"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/main_site" />
            <item
                android:id="@+id/go_library"
                android:icon="@drawable/ic_local_library_black_24dp"
                android:title="@string/main_library" />
                <item
                    android:id="@+id/table"
                    android:icon="@drawable/ic_table"
                    android:title="@string/main_table" />
            </group>
        </menu>
    </item>
    <group android:id="@+id/out_group">
        <item
            android:id="@+id/app_info"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/app_info">
        </item>
    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/sign_out">
    </item>
    </group>
</menu>
