<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_add_a_photo"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="0dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:digits="@string/alphabet"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sur_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sur_name"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:digits="@string/alphabet"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/complete_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/complete" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
