<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.MMGS.radiogram.main_activities.AddLossActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        app:title="@string/add_loss"
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="55dp"
        android:theme="@style/AppTheme.AppBarOverlay" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/card_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true">
            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/loss_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_add_a_photo">
                </ImageView>
                <Button
                    android:id="@+id/loss_edit_photo_button"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_photo"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="150dp"/>
            </android.support.design.widget.CoordinatorLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/card_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="5dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <android.support.design.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/name_of_thing"
                            android:textSize="12sp"/>
                        <TextView
                            android:id="@+id/loss_name_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/flesh"
                            android:textSize="20sp"
                            android:layout_marginStart="10dp" />
                        <TextView
                            android:layout_gravity="end"
                            android:id="@+id/loss_name_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/change"
                            android:textSize="12sp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textColor="@color/colorAccent"/>
                    </android.support.design.widget.CoordinatorLayout>
                    <android.support.design.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:id="@+id/date_thing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/date_of_loss"
                            android:textSize="12sp"/>
                        <TextView
                            android:id="@+id/date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/default_date"
                            android:textSize="20sp"
                            android:layout_marginStart="10dp" />
                        <TextView
                            android:layout_gravity="end"
                            android:id="@+id/date_text_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/change"
                            android:textSize="12sp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textColor="@color/colorAccent"/>
                    </android.support.design.widget.CoordinatorLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="5dp" >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/loss_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:textColor="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>
            <Button
                android:id="@+id/loss_done"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/complete_2"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
