<LinearLayout
    android:id="@+id/message"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/message_date"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/time"/>
    </FrameLayout>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:id="@+id/circle_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp" />
        <android.support.v7.widget.CardView
            android:layout_gravity="right"
            android:layout_marginRight="55dp"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="5dp"
            card_view:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/message_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/default_name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/message_time"
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/default_date" />

                </android.support.design.widget.CoordinatorLayout>

                <TextView
                    android:id="@+id/message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:text="@string/message"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>