<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:id="@+id/loss_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="280dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"/>
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="60dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lost_user_2"
                    android:textSize="15sp"
                    android:textColor="@color/colorDarkGray"
                    android:textStyle="bold"
                    android:text="@string/name"/>
                <TextView
                    android:layout_margin="20dp"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lost_time_2"
                    android:textSize="15sp"
                    android:textColor="@color/colorDarkGray"
                    android:textStyle="bold"
                    android:text="@string/time"/>
                <ImageView
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lost_image"
                    android:scaleType="centerCrop"/>
                    <View
                        android:layout_height="60dp"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:background="@drawable/image_shadow"
                    />
                <ImageView
                    android:id="@+id/loss_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/ic_edit_white_30dp"/>
                <ImageView
                    android:id="@+id/loss_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/ic_delete_forever_white_30dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lost_name"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/menu_lost"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="50dp" />
            </android.support.design.widget.CoordinatorLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lost_description_2"
                    android:textSize="15sp"
                    android:textColor="@color/colorDarkGray"
                    android:text="@string/description"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>